# VSCode-Sync-Tool-

./: .gitattributes  .gitignore  LICENSE  Makefile  PyInstaller  README.md  TODO.md  package-lock.json  package.json  pyinstaller.spec  pylintrc  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  web-ci.yml
cli/: pylintrc  pyproject.toml
cli/tests/: __init__.py  test_main.py  test_presets.py
cli/vscode_sync/: __init__.py  presets.py
devenv-sync/: CHANGELOG.md  README.md  package-lock.json  package.json
devenv-sync/src/: extension.ts
examples/: demo_script.py
scripts/: build.py
src/: __init__.py  config.py  main.py  presets.py
tests/: __init__.py  test_basic.py  test_config.py  test_main.py
vscode_sync/: config.py  main.py
web/: README.md  jest.config.js  jest.setup.js  package-lock.json  package.json
web/app/: page.tsx
web/app/auth/: page.tsx
web/app/dashboard/: page.tsx
web/app/dashboard/__tests__/: dashboard.unit.test.tsx
